# ic-one-bridge

./: .gitignore  Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sns_functions.md  token_listing.md
.github/workflows/: release.yml
proposals/: proposal-449.sh  proposal-458.sh  proposal-459.sh  proposal-460.sh  proposal-461.sh  proposal-462.sh  proposal-463.sh  proposal-464.sh
src/declarations/one_bridge_app/: index.js
src/declarations/one_bridge_canister/: index.d.ts  one_bridge_canister.did  one_bridge_canister.did.d.ts  one_bridge_canister.did.js
src/one_bridge_app/: README.md  package.json  tsconfig.json  vite.config.js
src/one_bridge_app/src/: app.css  app.html
src/one_bridge_app/src/declarations/one_bridge_app/: index.d.ts  index.js
src/one_bridge_app/src/declarations/one_bridge_canister/: index.js  one_bridge_canister.did  one_bridge_canister.did.d.ts  one_bridge_canister.did.js
src/one_bridge_app/src/lib/: constants.ts
src/one_bridge_app/src/lib/canisters/: bridge.svelte.ts  tokenledger.ts
src/one_bridge_app/src/lib/components/: BridgeCard.svelte  BridgeLogs.svelte  ChainSelector.svelte  ConnectWalletButton.svelte  Dropdown.svelte  Header.svelte  PrimaryButton.svelte  TokenInput.svelte  TokenSelector.svelte  WalletCard.svelte
src/one_bridge_app/src/lib/config/: site.ts
src/one_bridge_app/src/lib/stores/: auth.svelte.ts  toast.svelte.ts
src/one_bridge_app/src/lib/styles/: theme.css
src/one_bridge_app/src/lib/types/: bridge.ts
src/one_bridge_app/src/lib/utils/: auth.ts  evmrpc.ts  fetcher.ts  helper.ts  svmrpc.ts  token.ts  window.ts
src/one_bridge_app/src/routes/: +layout.svelte  +page.svelte
src/one_bridge_app/static/: .ic-assets.json
src/one_bridge_app/static/.well-known/: ic-domains
src/one_bridge_canister/: Cargo.toml  one_bridge_canister.did
src/one_bridge_canister/src/: api.rs  api_admin.rs  api_http.rs  api_init.rs  ecdsa.rs  evm.rs  helper.rs  lib.rs  store.rs  types.rs
src/sub_bridge_canister/: sub_bridge_canister.did
