[workspace]
members = ["src/one_bridge_canister"]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
edition = "2024"
version = "0.2.1"
repository = "https://github.com/ldclabs/ic-one-bridge"
keywords = ["canister", "icp", "bridge", "erc20", "icrc"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy-consensus = "1"
alloy-eips = "1"
alloy-primitives = "1.4"
alloy-rpc-types-eth = "1"
alloy-signer = "1"
base64 = "0.22"
candid = { version = "0.10", features = ["value", "printer"] }
ciborium = "0.2"
futures = "0.3"
ic-cdk = "0.19.0-beta.3"
ic-cdk-timers = "1.0.0-beta.1"
ic-stable-structures = "0.7"
ic-http-certification = "3"
ic_auth_types = "0.6"
ic-secp256k1 = "0.3"
icrc-ledger-types = "0.1"
lazy_static = "1.5"
once_cell = "1.21"
num-traits = "0.2"
url = "2.5"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
k256 = { version = "0.13", features = ["ecdsa"] }
ic-dummy-getrandom-for-wasm = "0.1"

[workspace.metadata.cargo-shear]
ignored = ["ic-dummy-getrandom-for-wasm"]
