[package]
name = "one_bridge_canister"
description = "A Fully On-Chain Multi-Chain Token Bridge for the Internet Computer, Ethereum, BNB Chain and other EVM chains."
publish = false
repository = "https://github.com/ldclabs/ic-one-bridge/tree/main/src/one_bridge_canister"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer = { workspace = true }
base64 = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
ic-http-certification = { workspace = true }
ic_auth_types = { workspace = true }
ic-secp256k1 = { workspace = true }
icrc-ledger-types = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
num-traits = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
k256 = { workspace = true, features = ["ecdsa"] }
ic-dummy-getrandom-for-wasm = { workspace = true }
